force-app/main/default/objects/BookingEvent__c/BookingEvent__c.object-meta.xml
<CustomObject>
    <label>Booking Event</label>
    <pluralLabel>Booking Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>