force-app/main/default/objects/BookingEvent__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_BookingEvent</relationshipName>
    <relationshipLabel>Account (BookingEvent)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>