force-app/main/default/objects/BookingEvent__c/fields/ActualAttendance__c.field-meta.xml
<CustomField>
    <fullName>ActualAttendance__c</fullName>
    <label>Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>