force-app/main/default/objects/BookingEvent__c/fields/ActualAverageCheck10__c.field-meta.xml
<CustomField>
    <fullName>ActualAverageCheck10__c</fullName>
    <label>Actual Avg Check 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>