force-app/main/default/objects/BookingEvent__c/fields/ActualAverageCheck11__c.field-meta.xml
<CustomField>
    <fullName>ActualAverageCheck11__c</fullName>
    <label>Actual Avg Check 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>