force-app/main/default/objects/BookingEvent__c/fields/ActualAverageCheck12__c.field-meta.xml
<CustomField>
    <fullName>ActualAverageCheck12__c</fullName>
    <label>Actual Avg Check 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>