force-app/main/default/objects/BookingEvent__c/fields/ActualCovers__c.field-meta.xml
<CustomField>
    <fullName>ActualCovers__c</fullName>
    <label>Actual Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>