force-app/main/default/objects/BookingEvent__c/fields/ActualEventCovers__c.field-meta.xml
<CustomField>
    <fullName>ActualEventCovers__c</fullName>
    <label>Actual Event Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>