force-app/main/default/objects/BookingEvent__c/fields/ActualPackageCovers__c.field-meta.xml
<CustomField>
    <fullName>ActualPackageCovers__c</fullName>
    <label>Actual Package Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>