force-app/main/default/objects/BookingEvent__c/fields/ActualRevenue11__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenue11__c</fullName>
    <label>Actual Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>