force-app/main/default/objects/BookingEvent__c/fields/ActualRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenueTotal__c</fullName>
    <label>Actual Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>