force-app/main/default/objects/BookingEvent__c/fields/AgreedAttendance__c.field-meta.xml
<CustomField>
    <fullName>AgreedAttendance__c</fullName>
    <label>Agreed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>