force-app/main/default/objects/BookingEvent__c/fields/AgreedEventAttendance__c.field-meta.xml
<CustomField>
    <fullName>AgreedEventAttendance__c</fullName>
    <label>Agreed (Event)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>