force-app/main/default/objects/BookingEvent__c/fields/AgreedPackageAttendance__c.field-meta.xml
<CustomField>
    <fullName>AgreedPackageAttendance__c</fullName>
    <label>Package Agreed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>