force-app/main/default/objects/BookingEvent__c/fields/AlternateFunctionRoomRental__c.field-meta.xml
<CustomField>
    <fullName>AlternateFunctionRoomRental__c</fullName>
    <label>Alternate Function Room Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>