force-app/main/default/objects/BookingEvent__c/fields/AlternateName__c.field-meta.xml
<CustomField>
    <fullName>AlternateName__c</fullName>
    <label>Alternate Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>