force-app/main/default/objects/BookingEvent__c/fields/ApplyChargesToDiscPriceOverride__c.field-meta.xml
<CustomField>
    <fullName>ApplyChargesToDiscPriceOverride__c</fullName>
    <label>Apply Admin &amp; Gratuity to Disc Price</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>