force-app/main/default/objects/BookingEvent__c/fields/BlockEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>BlockEndDateTime__c</fullName>
    <label>Block End Date Time</label>
    <type>DateTime</type>
</CustomField>