force-app/main/default/objects/BookingEvent__c/fields/BlockStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>BlockStartDateTime__c</fullName>
    <label>Block Start Date Time</label>
    <type>DateTime</type>
</CustomField>