force-app/main/default/objects/BookingEvent__c/fields/BookedCovers__c.field-meta.xml
<CustomField>
    <fullName>BookedCovers__c</fullName>
    <label>Booked Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>