force-app/main/default/objects/BookingEvent__c/fields/BookedEventCovers__c.field-meta.xml
<CustomField>
    <fullName>BookedEventCovers__c</fullName>
    <label>Booked Event Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>