force-app/main/default/objects/BookingEvent__c/fields/BookedPackageCovers__c.field-meta.xml
<CustomField>
    <fullName>BookedPackageCovers__c</fullName>
    <label>Booked Package Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>