force-app/main/default/objects/BookingEvent__c/fields/BookedRevenue11__c.field-meta.xml
<CustomField>
    <fullName>BookedRevenue11__c</fullName>
    <label>Booked Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>