force-app/main/default/objects/BookingEvent__c/fields/BookedRevenue12__c.field-meta.xml
<CustomField>
    <fullName>BookedRevenue12__c</fullName>
    <label>Booked Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>