force-app/main/default/objects/BookingEvent__c/fields/BookedRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>BookedRevenueTotal__c</fullName>
    <label>Booked Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>