force-app/main/default/objects/BookingEvent__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipName>Booking_BookingEvent</relationshipName>
    <relationshipLabel>Booking (BookingEvent)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>