force-app/main/default/objects/BookingEvent__c/fields/BoothQuantity__c.field-meta.xml
<CustomField>
    <fullName>BoothQuantity__c</fullName>
    <label>Booth Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>