force-app/main/default/objects/BookingEvent__c/fields/CalculateRevenue__c.field-meta.xml
<CustomField>
    <fullName>CalculateRevenue__c</fullName>
    <label>Calculate Revenue</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>