force-app/main/default/objects/BookingEvent__c/fields/Covers__c.field-meta.xml
<CustomField>
    <fullName>Covers__c</fullName>
    <label>Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>