force-app/main/default/objects/BookingEvent__c/fields/CreateAsDelphiCore__c.field-meta.xml
<CustomField>
    <fullName>CreateAsDelphiCore__c</fullName>
    <label>Create As Delphi Core</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>