force-app/main/default/objects/BookingEvent__c/fields/CurrentBlendedRevenue10__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedRevenue10__c</fullName>
    <label>Blended Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>