force-app/main/default/objects/BookingEvent__c/fields/CurrentBlendedRevenue11__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedRevenue11__c</fullName>
    <label>Blended Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>