force-app/main/default/objects/BookingEvent__c/fields/CurrentBlendedRevenue12__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedRevenue12__c</fullName>
    <label>Blended Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>