force-app/main/default/objects/BookingEvent__c/fields/CurrentBlendedRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedRevenueTotal__c</fullName>
    <label>Blended Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>