force-app/main/default/objects/BookingEvent__c/fields/CustomEventStatusName__c.field-meta.xml
<CustomField>
    <fullName>CustomEventStatusName__c</fullName>
    <label>Custom Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DefaultValue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>