force-app/main/default/objects/BookingEvent__c/fields/DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek__c</fullName>
    <label>Start Day of Week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>