force-app/main/default/objects/BookingEvent__c/fields/DistributedInternally__c.field-meta.xml
<CustomField>
    <fullName>DistributedInternally__c</fullName>
    <label>Distributed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>