force-app/main/default/objects/BookingEvent__c/fields/EndTime24Hour__c.field-meta.xml
<CustomField>
    <fullName>EndTime24Hour__c</fullName>
    <label>End Time 24 Hour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>06:00</fullName>
            </value>
            <value>
                <fullName>06:15</fullName>
            </value>
            <value>
                <fullName>06:30</fullName>
            </value>
            <value>
                <fullName>06:45</fullName>
            </value>
            <value>
                <fullName>07:00</fullName>
            </value>
            <value>
                <fullName>07:15</fullName>
            </value>
            <value>
                <fullName>07:30</fullName>
            </value>
            <value>
                <fullName>07:45</fullName>
            </value>
            <value>
                <fullName>08:00</fullName>
            </value>
            <value>
                <fullName>08:15</fullName>
            </value>
            <value>
                <fullName>08:30</fullName>
            </value>
            <value>
                <fullName>08:45</fullName>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>09:15</fullName>
            </value>
            <value>
                <fullName>09:30</fullName>
            </value>
            <value>
                <fullName>09:45</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>10:15</fullName>
            </value>
            <value>
                <fullName>10:30</fullName>
            </value>
            <value>
                <fullName>10:45</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:15</fullName>
            </value>
            <value>
                <fullName>11:30</fullName>
            </value>
            <value>
                <fullName>11:45</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>12:15</fullName>
            </value>
            <value>
                <fullName>12:30</fullName>
            </value>
            <value>
                <fullName>12:45</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>13:15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>