force-app/main/default/objects/BookingEvent__c/fields/EventClassificationName__c.field-meta.xml
<CustomField>
    <fullName>EventClassificationName__c</fullName>
    <label>Event Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Teardown</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Continental Breakfast</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Golf Tournament</fullName>
            </value>
            <value>
                <fullName>Meditation Session</fullName>
            </value>
            <value>
                <fullName>Yoga Session</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Morning Break</fullName>
            </value>
            <value>
                <fullName>Afternoon Break</fullName>
            </value>
            <value>
                <fullName>24 Hour Hold</fullName>
            </value>
            <value>
                <fullName>Package Breakfast</fullName>
            </value>
            <value>
                <fullName>Package Break</fullName>
            </value>
            <value>
                <fullName>Package Morning Break</fullName>
            </value>
            <value>
                <fullName>Package Lunch</fullName>
            </value>
            <value>
                <fullName>Package Afternoon Break</fullName>
            </value>
            <value>
                <fullName>Package Meeting</fullName>
            </value>
            <value>
                <fullName>Package Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>