force-app/main/default/objects/BookingEvent__c/fields/EventContact__c.field-meta.xml
<CustomField>
    <fullName>EventContact__c</fullName>
    <label>Event Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>EventContact_BookingEvent</relationshipName>
    <relationshipLabel>EventContact (BookingEvent)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>