force-app/main/default/objects/BookingEvent__c/fields/EventMessage__c.field-meta.xml
<CustomField>
    <fullName>EventMessage__c</fullName>
    <label>Event Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>