force-app/main/default/objects/BookingEvent__c/fields/EventStatus__c.field-meta.xml
<CustomField>
    <fullName>EventStatus__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Definite</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>TurnedDown</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled</fullName>
            </value>
            <value>
                <fullName>Event Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>