force-app/main/default/objects/BookingEvent__c/fields/ForecastAttendance__c.field-meta.xml
<CustomField>
    <fullName>ForecastAttendance__c</fullName>
    <label>Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>