force-app/main/default/objects/BookingEvent__c/fields/ForecastAverageCheck10__c.field-meta.xml
<CustomField>
    <fullName>ForecastAverageCheck10__c</fullName>
    <label>Forecast Average Check 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>