force-app/main/default/objects/BookingEvent__c/fields/ForecastAverageCheck11__c.field-meta.xml
<CustomField>
    <fullName>ForecastAverageCheck11__c</fullName>
    <label>Forecast Average Check 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>