force-app/main/default/objects/BookingEvent__c/fields/ForecastAverageCheck12__c.field-meta.xml
<CustomField>
    <fullName>ForecastAverageCheck12__c</fullName>
    <label>Forecast Average Check 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>