force-app/main/default/objects/BookingEvent__c/fields/ForecastAverageCheckFactor12__c.field-meta.xml
<CustomField>
    <fullName>ForecastAverageCheckFactor12__c</fullName>
    <label>Forecast Average Check Factor 12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Event</fullName>
            </value>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Not Calculated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>