force-app/main/default/objects/BookingEvent__c/fields/ForecastEventAttendance__c.field-meta.xml
<CustomField>
    <fullName>ForecastEventAttendance__c</fullName>
    <label>Expected (Event)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>