force-app/main/default/objects/BookingEvent__c/fields/ForecastPackageAttendance__c.field-meta.xml
<CustomField>
    <fullName>ForecastPackageAttendance__c</fullName>
    <label>Package Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>