force-app/main/default/objects/BookingEvent__c/fields/ForecastRevenue10__c.field-meta.xml
<CustomField>
    <fullName>ForecastRevenue10__c</fullName>
    <label>Forecast Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>