force-app/main/default/objects/BookingEvent__c/fields/ForecastRevenue11__c.field-meta.xml
<CustomField>
    <fullName>ForecastRevenue11__c</fullName>
    <label>Forecast Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>