force-app/main/default/objects/BookingEvent__c/fields/ForecastRevenue12__c.field-meta.xml
<CustomField>
    <fullName>ForecastRevenue12__c</fullName>
    <label>Forecast Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>