force-app/main/default/objects/BookingEvent__c/fields/ForecastRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ForecastRevenueTotal__c</fullName>
    <label>Forecasted Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>