force-app/main/default/objects/BookingEvent__c/fields/FunctionRoomOptionNumber__c.field-meta.xml
<CustomField>
    <fullName>FunctionRoomOptionNumber__c</fullName>
    <label>Option Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>