force-app/main/default/objects/BookingEvent__c/fields/FunctionRoomRental__c.field-meta.xml
<CustomField>
    <fullName>FunctionRoomRental__c</fullName>
    <label>Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>