force-app/main/default/objects/BookingEvent__c/fields/FunctionRoomRentalAdminCharge__c.field-meta.xml
<CustomField>
    <fullName>FunctionRoomRentalAdminCharge__c</fullName>
    <label>Rental Admin Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>