force-app/main/default/objects/BookingEvent__c/fields/FunctionRoomRentalCalculation__c.field-meta.xml
<CustomField>
    <fullName>FunctionRoomRentalCalculation__c</fullName>
    <label>Function Room Rental Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Event</fullName>
                <default>true</default>
                <label>Per Event</label>
            </value>
            <value>
                <fullName>Per Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>