force-app/main/default/objects/BookingEvent__c/fields/FunctionRoomRentalGratuity__c.field-meta.xml
<CustomField>
    <fullName>FunctionRoomRentalGratuity__c</fullName>
    <label>Rental Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>