force-app/main/default/objects/BookingEvent__c/fields/FunctionRoomSetupName__c.field-meta.xml
<CustomField>
    <fullName>FunctionRoomSetupName__c</fullName>
    <label>Function Room Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DefaultValue</fullName>
            </value>
            <value>
                <fullName>Circle of Chairs</fullName>
            </value>
            <value>
                <fullName>Classroom 2 per table</fullName>
            </value>
            <value>
                <fullName>Classroom 3 per table</fullName>
            </value>
            <value>
                <fullName>Cocktail Rounds</fullName>
            </value>
            <value>
                <fullName>Conference/Boardroom</fullName>
            </value>
            <value>
                <fullName>Crescent Rounds</fullName>
            </value>
            <value>
                <fullName>Empty Room</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Hollow Square</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Rounds of 10</fullName>
            </value>
            <value>
                <fullName>Rounds of 12</fullName>
            </value>
            <value>
                <fullName>Rounds of 6</fullName>
            </value>
            <value>
                <fullName>Rounds of 8</fullName>
            </value>
            <value>
                <fullName>See Diagram</fullName>
            </value>
            <value>
                <fullName>U-Shape</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>