force-app/main/default/objects/BookingEvent__c/fields/GuaranteedAttendance__c.field-meta.xml
<CustomField>
    <fullName>GuaranteedAttendance__c</fullName>
    <label>Guaranteed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>