force-app/main/default/objects/BookingEvent__c/fields/GuaranteedEventAttendance__c.field-meta.xml
<CustomField>
    <fullName>GuaranteedEventAttendance__c</fullName>
    <label>Guaranteed (Event)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>