force-app/main/default/objects/BookingEvent__c/fields/GuaranteedPackageAttendance__c.field-meta.xml
<CustomField>
    <fullName>GuaranteedPackageAttendance__c</fullName>
    <label>Package Guaranteed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>