force-app/main/default/objects/BookingEvent__c/fields/HasInvalidTaxGroup__c.field-meta.xml
<CustomField>
    <fullName>HasInvalidTaxGroup__c</fullName>
    <label>Has Invalid Tax Group</label>
    <description>Will be true if the BookingEvent Start Date falls outside of the associated Tax Group Start and End Date range</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>