force-app/main/default/objects/BookingEvent__c/fields/InclusiveAlternateFunctionRoomRental__c.field-meta.xml
<CustomField>
    <fullName>InclusiveAlternateFunctionRoomRental__c</fullName>
    <label>Inclusive Alternate Function Room Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>