force-app/main/default/objects/BookingEvent__c/fields/InclusiveFunctionRoomRental__c.field-meta.xml
<CustomField>
    <fullName>InclusiveFunctionRoomRental__c</fullName>
    <label>zNI InclusiveFunctionRoomRental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>