force-app/main/default/objects/BookingEvent__c/fields/IsBanquetCheckBatchPrinted__c.field-meta.xml
<CustomField>
    <fullName>IsBanquetCheckBatchPrinted__c</fullName>
    <label>Banquet Check Batch Printed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>