force-app/main/default/objects/BookingEvent__c/fields/IsBeoRevised__c.field-meta.xml
<CustomField>
    <fullName>IsBeoRevised__c</fullName>
    <label>Revised BEO</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>