force-app/main/default/objects/BookingEvent__c/fields/IsMoveable__c.field-meta.xml
<CustomField>
    <fullName>IsMoveable__c</fullName>
    <label>Moveable</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>