force-app/main/default/objects/BookingEvent__c/fields/IsOwnerLocked__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerLocked__c</fullName>
    <label>Owner Locked</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>