force-app/main/default/objects/BookingEvent__c/fields/IsPosted__c.field-meta.xml
<CustomField>
    <fullName>IsPosted__c</fullName>
    <label>Post</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>