force-app/main/default/objects/BookingEvent__c/fields/IsStatusLocked__c.field-meta.xml
<CustomField>
    <fullName>IsStatusLocked__c</fullName>
    <label>Override Booking Status</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>