force-app/main/default/objects/BookingEvent__c/fields/LastBeoRevisedDate__c.field-meta.xml
<CustomField>
    <fullName>LastBeoRevisedDate__c</fullName>
    <label>BEO Revised Date</label>
    <type>DateTime</type>
</CustomField>