force-app/main/default/objects/BookingEvent__c/fields/LocIdBkgIdEventClassIdStartDateString__c.field-meta.xml
<CustomField>
    <fullName>LocIdBkgIdEventClassIdStartDateString__c</fullName>
    <label>LocIdBkgIdEventClassIdStartDateString</label>
    <length>64</length>
    <type>Text</type>
</CustomField>