force-app/main/default/objects/BookingEvent__c/fields/Notes10__c.field-meta.xml
<CustomField>
    <fullName>Notes10__c</fullName>
    <label>Notes 10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>